# Suno-Saathi

./: .env.example  .gitignore  README.md  main.py  requirements.txt  trial.py
backend/: .gitignore  .pre-commit-config.yaml  README.md  app.py  main.py  pyproject.toml  requirements.txt  run.py  test_api.py
backend/config/: __init__.py  secrets.py  settings.py
backend/core/: config.py  llm.py  test_llm.py  test_llm_api.py
backend/modules/: llm_interface.py  navigation.py  test_navigation.py  wake_word.py
backend/saarthi/: routes.py  routes.py.backup  routes_fixed.py  schemas.py
backend/tests/: test_api.py
frontend/: .env.example  .gitignore  README.md  index.html  manifest.json  next.config.ts  offline.html  package-lock.json  package.json
frontend-2/.next/: trace
frontend-2/src/map/: map.tsx
frontend/css/: navigation-mode.css  navigation.css  style.css  styles.css  voice-modal.css  voice-ui.css  voice.css
frontend/includes/: navigation-mode.html
frontend/js/: api.js  config.js  debug-nav.js  directions.js  main.js  map.js  navigation-mode.js  navigation.js  secrets.js  service-worker.js  voice-recognition.js
frontend/pages/: _app.tsx  _document.tsx  index.tsx
frontend/pages/api/: llm.ts
frontend/partials/: voice-ui.html
frontend/public/: manifest.json  sw.js
frontend/src/api/: api-service.ts  api.ts  schemas.ts
frontend/src/app/: app-layout.module.scss  app-layout.tsx
frontend/src/map/: map.module.scss  map.tsx
frontend/src/navigation/: chat-interface.module.scss  (+9 more)
modules/: llm_interface.py  navigation.py  wake_word.py
(+6 files in other folders)
