[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Mehul Arora",email = "mehul21066@iiitd.ac.in"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.1,<0.35.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "googlemaps (>=4.10.0,<5.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "pydantic (>=2.11.3,<3.0.0)",
    "google-generativeai (>=0.8.5,<0.9.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "speechrecognition (>=3.14.2,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
pre-commit = "^4.2.0"

[tool.poetry.requires-plugins]
poetry-plugin-export = "^1.9.0"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120

